<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_background"
    tools:context=".SettingsDialogFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/screen_padding">

        <TextView
            android:id="@+id/title_settings_text_view"
            style="@style/SafetyScreenTitle"
            android:layout_width="match_parent"
            android:gravity="center"
            android:paddingBottom="@dimen/space_md"
            android:text="@string/settings" />

        <LinearLayout
            android:id="@+id/settings_tabs_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/settings_boat_tab_button"
                style="@style/SecondaryActionButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_xs"
                android:layout_weight="1"
                android:minHeight="44dp"
                android:paddingHorizontal="@dimen/space_sm"
                android:text="@string/settings_panel_boat"
                android:textSize="13sp" />

            <Button
                android:id="@+id/settings_sensors_tab_button"
                style="@style/SecondaryActionButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_xs"
                android:layout_marginEnd="@dimen/space_xs"
                android:layout_weight="1"
                android:minHeight="44dp"
                android:paddingHorizontal="@dimen/space_sm"
                android:text="@string/settings_panel_sensors"
                android:textSize="13sp" />

            <Button
                android:id="@+id/settings_sharing_tab_button"
                style="@style/SecondaryActionButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_xs"
                android:layout_weight="1"
                android:minHeight="44dp"
                android:paddingHorizontal="@dimen/space_sm"
                android:text="@string/settings_panel_sharing"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_boat_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/space_lg">

            <TextView
                style="@style/SettingsSectionTitle"
                android:text="@string/settings_boat_title" />

            <LinearLayout
                style="@style/SettingsRow">

                <Button
                    android:id="@+id/boat_no_button"
                    style="@style/SecondaryActionButton"
                    android:text="@string/settings_boat_button" />

                <TextView
                    android:id="@+id/boatno_text_view"
                    style="@style/SettingsValueText"
                    android:text="@string/_1" />

                <View
                    android:id="@+id/boatno_color"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/black" />
            </LinearLayout>

            <LinearLayout
                style="@style/SettingsRow">

                <Button
                    android:id="@+id/team_button"
                    style="@style/SecondaryActionButton"
                    android:text="@string/settings_team_button" />

                <TextView
                    android:id="@+id/team_text_view"
                    style="@style/SettingsValueText"
                    android:text="@string/unkn" />
            </LinearLayout>

            <LinearLayout
                style="@style/SettingsRow">

                <Button
                    android:id="@+id/frequancy_button"
                    style="@style/SecondaryActionButton"
                    android:text="@string/settings_log_frequency" />

                <TextView
                    android:id="@+id/frequency_text_view"
                    style="@style/SettingsValueText"
                    android:text="@string/_1_s" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_sensors_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/space_lg"
            android:visibility="gone">

            <TextView
                style="@style/SettingsSectionTitle"
                android:text="@string/settings_sensors_title" />

            <TextView
                style="@style/SettingsHintText"
                android:text="@string/settings_zero_applies_immediately" />

            <LinearLayout
                style="@style/SettingsRow">

                <TextView
                    style="@style/SettingsLabelText"
                    android:text="@string/settings_live_heel" />

                <TextView
                    android:id="@+id/live_heel_text_view"
                    style="@style/SettingsValueText"
                    android:text="0.0" />
            </LinearLayout>

            <LinearLayout
                style="@style/SettingsRow">

                <TextView
                    style="@style/SettingsLabelText"
                    android:text="@string/settings_live_pitch" />

                <TextView
                    android:id="@+id/live_pitch_text_view"
                    style="@style/SettingsValueText"
                    android:text="0.0" />
            </LinearLayout>

            <TextView
                android:id="@+id/zero_countdown_text_view"
                style="@style/SettingsHintText"
                android:layout_marginTop="@dimen/space_sm"
                android:text="@string/settings_zero_ready" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_sm"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/zero_heel_settings_button"
                    style="@style/SecondaryActionButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/space_xs"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:paddingHorizontal="@dimen/space_sm"
                    android:text="@string/zero_heel" />

                <Button
                    android:id="@+id/zero_pitch_settings_button"
                    style="@style/SecondaryActionButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_xs"
                    android:layout_marginEnd="@dimen/space_xs"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:paddingHorizontal="@dimen/space_sm"
                    android:text="@string/zero_pitch" />

                <Button
                    android:id="@+id/zero_both_settings_button"
                    style="@style/SecondaryActionButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/space_xs"
                    android:layout_weight="1"
                    android:minHeight="48dp"
                    android:paddingHorizontal="@dimen/space_sm"
                    android:text="@string/zero_both" />
            </LinearLayout>

            <TextView
                android:id="@+id/extra_offset_title_text_view"
                style="@style/SettingsSectionTitle"
                android:layout_marginTop="@dimen/space_lg"
                android:text="@string/settings_extra_offsets_title" />

            <LinearLayout
                style="@style/SettingsRow">

                <Button
                    android:id="@+id/extra_pitch_button"
                    style="@style/SecondaryActionButton"
                    android:text="@string/pitch" />

                <TextView
                    android:id="@+id/extra_pitch_text_view"
                    style="@style/SettingsValueText"
                    android:text="0.0" />
            </LinearLayout>

            <LinearLayout
                style="@style/SettingsRow">

                <Button
                    android:id="@+id/extra_heel_button"
                    style="@style/SecondaryActionButton"
                    android:text="@string/heel" />

                <TextView
                    android:id="@+id/extra_heel_text_view"
                    style="@style/SettingsValueText"
                    android:text="0.0" />
            </LinearLayout>

            <LinearLayout
                style="@style/SettingsRow">

                <Button
                    android:id="@+id/reset_offsets_button"
                    style="@style/DangerActionButton"
                    android:text="@string/reset_zeroing" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/space_md">

                    <TextView
                        android:id="@+id/heel_offset_text_view"
                        style="@style/SettingsValueText"
                        android:layout_width="match_parent"
                        android:text="Heel: 0.0" />

                    <TextView
                        android:id="@+id/pitch_offset_text_view"
                        style="@style/SettingsValueText"
                        android:layout_width="match_parent"
                        android:text="Pitch: 0.0" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/log_title_text_view"
                style="@style/SettingsSectionTitle"
                android:layout_marginTop="@dimen/space_lg"
                android:text="@string/log_title" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/log_heel_switch"
                style="@style/SettingsSwitch"
                android:checked="true"
                android:text="@string/heel" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/log_pitch_switch"
                style="@style/SettingsSwitch"
                android:checked="true"
                android:text="@string/pitch" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/log_heading_switch"
                style="@style/SettingsSwitch"
                android:checked="false"
                android:text="@string/heading" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/log_altitude_switch"
                style="@style/SettingsSwitch"
                android:checked="false"
                android:text="@string/altitude" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/log_magnet_switch"
                style="@style/SettingsSwitch"
                android:checked="false"
                android:text="@string/magnet"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_sharing_panel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/space_lg"
            android:visibility="gone">

            <TextView
                style="@style/SettingsSectionTitle"
                android:text="@string/settings_sharing_title" />

            <LinearLayout
                style="@style/SettingsRow">

                <Button
                    android:id="@+id/qr_size_button"
                    style="@style/SecondaryActionButton"
                    android:text="@string/settings_events_per_qr" />

                <TextView
                    android:id="@+id/qr_size_text_view"
                    style="@style/SettingsValueText"
                    android:text="10" />
            </LinearLayout>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/log_cyclops_switch"
                style="@style/SettingsSwitch"
                android:checked="false"
                android:text="@string/settings_log_cyclops" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/settings_actions_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_lg"
            android:orientation="horizontal">

            <Button
                android:id="@+id/ok_settings_button"
                style="@style/PrimaryActionButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_sm"
                android:layout_weight="1"
                android:text="@string/ok" />

            <Button
                android:id="@+id/cancel_settings_button"
                style="@style/SecondaryActionButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_sm"
                android:layout_weight="1"
                android:text="@string/cancel" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
