<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical"
    android:padding="@dimen/screen_padding"
    tools:context=".ShareFragment">

    <Button
        android:id="@+id/navigate_back_button"
        style="@style/SecondaryActionButton"
        android:text="@string/back" />

    <TextView
        android:id="@+id/share_title_text_view"
        style="@style/SafetyScreenTitle"
        android:layout_marginTop="@dimen/space_md"
        android:text="@string/saved_logs" />

    <TextView
        android:id="@+id/share_empty_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_lg"
        android:gravity="center"
        android:text="@string/no_saved_logs"
        android:textColor="@color/app_text_secondary"
        android:textSize="16sp"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/share_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/space_md"
        android:layout_weight="1"
        android:clipToPadding="false" />

</LinearLayout>
